src/snapshots/ir__tokenizer__tests__greater_than_equal.snap
---
source: src/tokenizer.rs
expression: res
---
- loc:
    line: 1
    col: 1
  token:
    Number: 1
- loc:
    line: 1
    col: 1
  token: GreaterThanEqual
- loc:
    line: 1
    col: 1
  token:
    Number: 1
