src/snapshots/ir__tokenizer__tests__less_than_equal.snap
---
source: src/tokenizer.rs
expression: res
---
- loc:
    line: 1
    col: 1
  token:
    Number: 1
- loc:
    line: 1
    col: 1
  token: LessThanEqual
- loc:
    line: 1
    col: 1
  token:
    Number: 1
