src/snapshots/ir__tokenizer__tests__number.snap
---
source: src/tokenizer.rs
expression: res
---
- loc:
    line: 1
    col: 1
  token:
    Number: 10000
