src/snapshots/ir__tokenizer__tests__plus.snap
---
source: src/tokenizer.rs
expression: res
---
- loc:
    line: 1
    col: 1
  token:
    Number: 1
- loc:
    line: 1
    col: 1
  token: Plus
- loc:
    line: 1
    col: 1
  token:
    Number: 1
